--- a/index.html
+++ b/index.html
@@ -1,11 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">    
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/style/main.css">
 </head>
+
 <body>
     
+        <div class="header">
+            <h1>My passion</h1>
+        </div>
+        <main class="main">
+        <div class="first">
+            <div class="image_1"></div>
+            <div class="text_1">
+                <h2 class="snow">Snowboarding</h2>
+                <p class="snow_text"> Modern snowboarding began in 1965 when Sherman Poppen, an engineer in Muskegon,
+                    Michigan, invented a toy
+                    for his daughters by fastening two skis together and attaching a rope to one end so he would have
+                    some
+                    control as they stood on the board and glided downhill. </p>
+                <p class="snow_text"> Dubbed the "snurfer" (combining snow and
+                    surfer)
+                    by his wife Nancy, the toy proved so popular among his daughters' friends that Poppen licensed the
+                    idea
+                    to a manufacturer, Brunswick Corporation, that sold about a million snurfers over the next decade.
+                    And,
+                    in 1966 alone, over half a million snurfers were sold.</p>
+            </div>
+        </div>
+        <div class="second">
+            <div class="text_1">
+                <h2 class="snow snow_billiard">Billiard</h2>
+                <p class="snow_text"> English billiards, called simply billiards in the United Kingdom,[a] where it
+                    originated, and in many former British colonies such as Australia, is a cue sport that combines the
+                    aspects of carom billiards and pool. Two cue balls (historically both white, with one marked with a
+                    dot,
+                    but more recently one white and one yellow) and a red object ball are used.</p>
+                <p class="snow_text"> Each player or team uses
+                    a
+                    different cue ball. It is played on a billiards table with the same dimensions as a snooker table
+                    and
+                    points are scored for cannons and pocketing the balls. English billiards has also, but less
+                    frequently,
+                    been referred to as "the English game", "the all-in game" and (formerly) "the common game".</p>
+            </div>
+            <div class="image_2"></div>
+        </div>
+        <div class="third">
+            <div class="image_3"></div>
+            <div class="text_1">
+                <h2 class="snow">Alcohol</h2>
+                <p class="snow_text">The inflammable nature of the exhalations of wine was already known to ancient
+                    natural
+                    philosophers such as Aristotle (384–322 BCE), Theophrastus (c. 371–287 BCE), and Pliny the Elder
+                    (23/24–79 CE). However, this did not immediately lead to the isolation of alcohol, even despite
+                    the
+                    development of more advanced distillation techniques in second- and third-century Roman Egypt. An
+                    important recognition, first found in one of the writings attributed to Jābir ibn Ḥayyān (ninth
+                    century
+                    CE), was that by adding salt to boiling wine, which increases the wine's relative volatility, the
+                    flammability of the resulting vapors may be enhanced. The distillation of wine is attested in
+                    Arabic
+                    works attributed to al-Kindī (c. 801–873 CE) and to al-Fārābī (c. 872–950), and in the 28th book of
+                    al-Zahrāwī's (Latin: Abulcasis, 936–1013) Kitāb al-Taṣrīf (later translated into Latin as Liber
+                    servatoris). In the twelfth century, recipes for the production of aqua ardens ("burning water",
+                    i.e., alcohol) by distilling wine with salt started to appear in a number of Latin works, and by the
+                    end
+                    of the thirteenth century it had become a widely known substance among Western European chemists.
+                </p>
+            </div>
+        </div>
+        <div class="fourth">
+            <div class="text_1">
+                <h2 class="snow snow_it">IT</h2>
+                <p class="snow_text">Information technology (IT) is the use of computers to store or retrieve data
+                    and information. IT is typically used within the context of business operations as opposed to
+                    personal or entertainment technologies. IT is considered to be a subset of information and
+                    communications technology (ICT). An information technology system (IT system) is generally an
+                    information system, a communications system, or, more specifically speaking, a computer system –
+                    including all hardware, software, and peripheral equipment – operated by a limited group of IT
+                    users.
+
+                    Humans have been storing, retrieving, manipulating, and communicating information since the
+                    Sumerians in Mesopotamia developed writing in about 3000 BC. However, the term information
+                    technology in its modern sense first appeared in a 1958 article published in the Harvard Business
+                    Review; authors Harold J. Leavitt and Thomas L. Whisler commented that "the new technology does not
+                    yet have a single established name. We shall call it information technology (IT)." </p>
+            </div>
+            <div class="image_4"></div>
+        </div>
+    </main>
 </body>
+
 </html>
